tests/snapshots/simplify_matches__nested2.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/nested2.hvm
---
(Foo) = λa λb (match b { (List.cons c d): λe (match d { (List.cons f g): λh λi (h i f g); (List.nil): λj λk (j (List.cons k List.nil)) } e c); (List.nil): λm (m List.nil) } a)

(List.nil) = #List λ* #List λb b

(List.cons) = λa λb #List λc #List λ* #List (c a b)
