tests/snapshots/simplify_matches__redundant_with_era.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/redundant_with_era.hvm
---
(Fn2) = λ%arg0 switch %arg0 = %arg0 { 0: λ%arg1 let (%arg1.0, %arg1.1) = %arg1; let (%arg1.1.0, %arg1.1.1) = %arg1.1; %arg1.1.1; _: λ%arg1 let (%arg1.0, %arg1.1) = %arg1; let (%arg1.1.0, %arg1.1.1) = %arg1.1; %arg1.1.1 }

(main) = *
