tests/snapshots/simplify_matches__wrong_fn_arity.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/wrong_fn_arity.bend
---
[4m[1m[31mErrors:[0m
[1mIn definition '[4mFoo[0m[1m':[0m
  Incorrect pattern matching rule arity. Expected 3 args, found 0.
